@startuml test
class DerivedValueCollection {
  vals: {key: DerivedValue<any>}
}
abstract Modifier<T> {
  val: DerivedValue
  modifies: AttributeType[]
}
abstract DerivedValue<T> {
  label: DerivedValueType
  baseValue: T
  modifiedBy: Modifier<T>[]
  evaluate(): T
}
class ScalarAttribute
class ScalarModifier
enum DerivedValueType
DerivedValue <|-- ScalarAttribute
DerivedValue <-- Modifier
Modifier <|-- ScalarModifier
DerivedValueCollection *-- DerivedValue
@enduml
